# lapce-pwsh

./: Cargo.toml  Makefile  README.md  plugin.toml
src/: main.rs
