[package]
edition = "2021"
name = "lapce-pwsh"
version = "0.0.1"

[dependencies]
serde_json = "1.0.81"


[dependencies.serde]
version = "1.0.137"
features = ["derive"]

[dependencies.zip]
version = "0.6.0"
default-features = false
features = ["deflate"]

[dependencies.lapce-plugin]
rev = "48f0b0746c23fcd38a0c0aa37c7c85b15af4b4f0"
git = "https://github.com/lapce/lapce-plugin-rust.git"
